--- a/style.css
+++ b/style.css
@@ -17,3 +17,31 @@ body{
   background-color:#f7c0c0;
   margin:0 auto;
 }
+
+#nav{
+  padding: 0;
+}
+
+#nav li {
+  list-style-type: none;
+  float: none;
+  margin: 0;
+}
+
+#nav a:link, a:visited {
+  color: #666666;
+  background-color: #81c7eb;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+#nav a:hover, a:active {
+  background-color: #9d81e4;
+}
+
+img {
+  border-style: none;
+}
