--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ body{
   text-align: center;
 }
 
+p a{
+  display: block;
+  color: #666666;
+  background-color: #81c7eb;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
 #container{
   width:95%;
   background-color:#f7c0c0;
@@ -44,6 +55,8 @@ body{
 #nav a:hover, a:active {
   background-color: #9d81e4;
 }
+
+
 
 img {
   border-style: none;
