--- a/style.css
+++ b/style.css
@@ -1,62 +1,108 @@
-p{
-  font-family:'Lato', sans-serif;
-  color:#FDFFFF
+.navigation{
+  list-style:none;
+  margin:0;
+  background-color:#7F0900;
+  padding:0;
+  display:flex;
+  flex-flow:column;
 }
 
-h1{
-  font-family:'BioRhyme', serif;
-  color:#FDFFFF
-}
-
-body{
-  text-align: center;
-}
-
-p a{
-  display: block;
-  color: #FDFFFF;
-  background-color: #7F0900;
-  text-align: center;
-  text-decoration: none;
-  padding: 4px;
-  font-family: 'Montserrat', sans-serif;
-}
-
-#container{
-  width:95%;
-  background-color:#CC8E89;
-  margin:0 auto;
-}
-
-#nav{
-  padding: 0;
-}
-
-#nav li {
-  list-style-type: none;
-  float: left;
-  margin: 0;
-  padding: 0;
-  width: 20%;
-}
-
-#nav a:link, a:visited {
-  display: block;
-  color: #FDFFFF;
-  background-color: #7F0900;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  padding: 4px;
-  font-family:'Lato', sans-serif;
-}
-
-#nav a:hover, a:active {
-  background-color: #FFB1AC;
+.navigation a{
+  text-decoration:none;
+  display:block;
+  padding:10px;
+  color:white;
 }
 
 
+@media (min-width:800px){
+  .navigation{
+    flex-flow:row;
+  justify-content:flex-end;
+  }
 
-img {
-  border-style: none;
+  .navigation a:hover{
+    background:#FFB1AC;
+  }
+
+  .first{
+    margin-right:auto;
+  }
+}
+
+
+.header{
+  background:#CC8E89;
+}
+
+.footer{
+  background:#7F0900;
+}
+
+.main{
+  background:white;
+  text-align:left;
+}
+
+.aside-1{
+  background:#FFB1AC;
+}
+
+.aside-2{
+  background:#FFB1AC;
+}
+
+.wrapper{
+  display:flex;
+  flex-flow:row wrap;
+  font-weight:bold;
+  text-align:center;
+}
+
+.header,.main, .aside, .footer{
+  flex:1 100%;
+  padding:10px;
+}
+
+img{
+  width:100%;
+}
+
+
+@media (min-width:800px){
+  .aside{
+    flex:1 auto;
+  }
+
+  .main{
+    flex:3 0px;
+  }
+
+  .aside-1{
+    order:1;
+  }
+
+  .main{
+    order:2;
+  }
+
+  .aside-2{
+    order:3;
+  }
+
+  .footer{
+    order:4;
+  }
+
+  .main{
+    display:flex;
+    flex-flow:row;
+  }
+
+  img{
+    width:100%;
+    height:150px;
+    margin-right:20px;
+  }
+
 }
