--- a/style.css
+++ b/style.css
@@ -87,6 +87,22 @@ img{
   margin-right:20px
 }
 
+.map-wrapper {
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+
+.map-wrapper iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
+
 @media all and (min-width:600px){
   .head{
     display:flex;
